<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="@color/verify_phone_baground"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_marginLeft="25dp"
        android:layout_marginTop="47dp"
        android:src="@drawable/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ImageView
        android:src="@drawable/forgot_img"
        android:layout_marginHorizontal="109dp"
        android:layout_marginTop="9dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        android:fontFamily="@font/inter_semi_bold"
        android:textStyle="bold"
        android:textColor="@color/verify_phone"
        android:textSize="28dp"
        android:layout_marginLeft="@dimen/dp_30"
        android:text="@string/forgot_pass"
        android:layout_marginTop="26dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:fontFamily="@font/inter_regular"
        android:textColor="@color/textdesc"
        android:layout_marginRight="17dp"
        android:textSize="@dimen/sp_16"
        android:text="@string/reset_instruction"
        android:layout_marginTop="11dp"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:fontFamily="@font/inter_regular"
        android:textColor="@color/textdesc"
        android:layout_marginRight="17dp"
        android:textSize="@dimen/sp_16"
        android:text="@string/eamil_add"
        android:layout_marginTop="33dp"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:fontFamily="@font/inter_medium"
        android:drawableRight="@drawable/iconstheenvelope"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:fontFamily="@font/inter_semi_bold"
        android:text="Reset Password"
        android:layout_marginHorizontal="@dimen/dp_30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>